dev
===

Features
--------

- Added an option to filter by album id.
- Compatibility with python 3.1.
- Better handling of default value for arguments : less crashes.
- Changed the config file format : the name of the section is now "magnatune" instead of "default". Remember to update your config files !
- A lot of performance improvement and code cleaning.

0.2
===

Features
--------

- Albums download and extraction.
- New option, "--login", to use a subscription login when streaming.
- Config file support.

Changes
-------

- Decompress the database file on download to save some time afterward.
- Split the "--stream" option into "--stream" that specify whether to stream or not, and "--format" to specify the format.
- Changed the verbose argument and added a quiet argument.
- Changed the output format to be more readable.

Bugfixes
--------

- Bugfix : download the CRC file only when needed.

0.1
===

- Initial release