@@ -8,6 +8,7 @@ Features
 - Compatibility with python 3.1.
 - Better handling of default value for arguments : less crashes.
 - Changed the config file format : the name of the section is now "magnatune" instead of "default". Remember to update your config files !
+- Moved the config file from `~/.python-magnatune` to `~/.config/python-magnatune`.
 - A lot of performance improvement and code cleaning.
 
 0.2
